<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/purchasable_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvConsumable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nivad.billing_sample.consumable (مصرفی)"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase"
            android:id="@+id/btnPurchaseTest1"
            android:onClick="btnPurchaseTest1Click"
            android:layout_below="@+id/tvConsumable"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consume"
            android:id="@+id/btnConsumeTest1"
            android:onClick="btnConsumeTest1Click"
            android:layout_alignTop="@+id/btnPurchaseTest1"
            android:layout_toLeftOf="@+id/btnPurchaseTest1"
            android:layout_toStartOf="@+id/btnPurchaseTest1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNonConsumable"
            android:text="nivad.billing_sample.non_consumable (غیر مصرفی)"
            android:layout_below="@+id/btnPurchaseTest1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase"
            android:id="@+id/btnPurchaseTest2"
            android:onClick="btnPurchaseTest2Click"
            android:layout_gravity="right"
            android:layout_below="@+id/tvNonConsumable"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <TextView
        android:text="@string/subscriptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSubscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nivad.billing_sample.subscription (اشتراک ماهانه)"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase"
            android:id="@+id/btnSubsTest"
            android:onClick="btnSubscribeClick"
            android:layout_below="@+id/tvSubscription"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subs_test"
            android:id="@+id/btnCheckSubscription"
            android:onClick="btnCheckSubscriptionClick"
            android:layout_alignTop="@+id/btnSubsTest"
            android:layout_toLeftOf="@+id/btnSubsTest"
            android:layout_toStartOf="@+id/btnSubsTest" />

    </RelativeLayout>
</LinearLayout>
